--- a/titanic data analysis/titanic-data-analysis.ipynb
+++ b/titanic data analysis/titanic-data-analysis.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('C:\\\\Users\\\\ravi.k\\\\Downloads\\\\Data Science\\\\Data science with Python\\\\Projects\\\\Projects with Solution\\\\Project 2\\\\Datasets\\\\train.csv')"
+    "train_df = pd.read_csv('train.csv')"
    ]
   },
   {
@@ -179,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"C:\\\\Users\\\\ravi.k\\\\Downloads\\\\Data Science\\\\Data science with Python\\\\Projects\\\\Projects with Solution\\\\Project 2\\\\Datasets\\\\test.csv\")"
+    "test_df = pd.read_csv(\"test.csv\")"
    ]
   },
   {
@@ -485,7 +485,7 @@
    "source": [
     "#create a function to load train data file\n",
     "def load_titanic_train_file():\n",
-    "    titanic_train_df=pd.read_csv('C:\\\\Users\\\\ravi.k\\\\Downloads\\\\Data Science\\\\Data science with Python\\\\Projects\\\\Projects with Solution\\\\Project 2\\\\Datasets\\\\train.csv')\n",
+    "    titanic_train_df=pd.read_csv('train.csv')\n",
     "    cols=['Pclass','Sex','Age']\n",
     "    #change male to 1 and female to 0\n",
     "    titanic_train_df[\"Sex\"] = titanic_train_df['Sex'].apply(lambda sex:1 if sex=='male' else 0)\n",
@@ -498,7 +498,7 @@
     "\n",
     "#create function to load test data file\n",
     "def load_titanic_test_file():\n",
-    "    titanic_test_df=pd.read_csv('C:\\\\Users\\\\ravi.k\\\\Downloads\\\\Data Science\\\\Data science with Python\\\\Projects\\\\Projects with Solution\\\\Project 2\\\\Datasets\\\\test.csv')\n",
+    "    titanic_test_df=pd.read_csv('test.csv')\n",
     "    cols=['Pclass','Sex','Age']\n",
     "    #change male to 1 and female to 0\n",
     "    titanic_test_df[\"Sex\"] = titanic_test_df['Sex'].apply(lambda sex:1 if sex=='male' else 0)\n",
